# k8s-homelab

./: .config.sample.env  .devenv.flake.nix  .envrc  .gitignore  .pre-commit-config.yaml  .sops.yaml  .woodpecker.yaml  .yamllint.yaml  AGENTS.md  LICENSE  README.md  backups.md  dagger.json  devenv.nix  devenv.yaml  flake.nix  interactive-changelog.md  renovate.json
.dagger/: .gitignore  README.md  containers.go  dagger.gen.go  go.mod  go.sum  golang.go  helm.go  main.go  paths.go  python.go  terraform.go  tests.go
.dagger/pathutil/: pathutil.go  pathutil_test.go
.dagger/scripts/: helm-deps.sh  (+2 more)
.lab/: .gitignore
.woodpecker/: ci.yaml
config/: base.cue  production.cue  schema.cue  staging.cue
docs/: ci-architecture.md  nix-host-bootstrap.md
foundation/: glados-tts.yaml
helmfile.d/: glados-tts.yaml  longhorn.yaml
inventory/: inventory.yaml
k8s/apps/terraria/files/discord-bot/: README.md  pyproject.toml  server.py
k8s/apps/terraria/files/discord-bot/tests/: test_integration.py  test_server.py
k8s/platform/crowdsec/files/bootstrap-middleware/: README.md  bootstrap.py  pyproject.toml
k8s/platform/crowdsec/files/bootstrap-middleware/tests/: __init__.py  test_bootstrap.py  test_integration.py
scripts/: argocd-migration.sh  bootstrap-host.sh  bootstrap-nfs.sh  bootstrap-smb.sh  hacks  helm-diff-live.sh  k3s-secrets-to-yaml.sh  run-cronjob.sh  run-job.sh  run-renovate.sh  setup-partitions
terraform/: .terraform.lock.hcl  README.md  locals.tf  main.tf  outputs.tf  providers.tf  state.tf  tfvars.sops.example.yaml  tfvars.sops.yaml  variables.tf
(+576 files in other folders)
