[project]
name = "crowdsec-bootstrap"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "kubernetes>=31.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=6.0.0",
    "black>=24.0.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (require cluster, deselected by default)",
]
addopts = "-m 'not integration'"
